--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,24 @@
     <string name="title_activity_media">MediaActivity</string>
     <string name="action_settings">Settings</string>
 
-    <string name="ptw">Plan to Watch</string>
-    <string name="ptr">Plan to Read</string>
-    <string name="status">Status : </string>
     <string name="add">Add to List</string>
+    <string name="list_editor">List Editor</string>
+    <string name="status">STATUS</string>
+    <string-array name="status">
+        <item>PLANNING</item>
+        <item>CURRENT</item>
+        <item>COMPLETED</item>
+        <item>REPEATING</item>
+        <item>PAUSED</item>
+        <item>DROPPED</item>
+    </string-array>
+    <string name="progress">PROGRESS</string>
+    <string name="score">SCORE</string>
+    <string name="score_suffix">/ 10</string>
+    <string name="started_at">STARTED AT</string>
+    <string name="completed_at">COMPLETED AT</string>
 
+    <string name="save">Save</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
