--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,8 +49,24 @@
     <string name="score_suffix">/ 10</string>
     <string name="started_at">STARTED AT</string>
     <string name="completed_at">COMPLETED AT</string>
-
     <string name="save">Save</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="mean_score">Mean Score :</string>
+    <string name="format">Format :</string>
+    <string name="status_title">Status :</string>
+    <string name="total_eps">Total Episodes :</string>
+    <string name="total_chaps">Total Chapters :</string>
+    <string name="ep_duration">Avg. Duration of Episode :</string>
+    <string name="min">\u0008min</string>
+    <string name="season">Season :</string>
+    <string name="start_date">Start Date :</string>
+    <string name="end_date">End Date :</string>
+    <string name="source">Source :</string>
+    <string name="main_studio">Main Studio :</string>
+    <string name="genres">Genres</string>
+    <string name="description">Description</string>
+    <string name="characters">Characters</string>
+    <string name="relations">Relations</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
