--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
 
     <string name="add">Add to List</string>
     <string name="list_editor">List Editor</string>
+    <string name="add_fav">Add to Favourites</string>
+    <string name="notifications">Notifications</string>
     <string name="status">STATUS</string>
     <string-array name="status">
         <item>PLANNING</item>
@@ -46,25 +48,25 @@
     </string-array>
     <string name="progress">PROGRESS</string>
     <string name="score">SCORE</string>
-    <string name="score_suffix">/ 10</string>
+    <string name="score_suffix">\u0008/ 10</string>
     <string name="started_at">STARTED AT</string>
     <string name="completed_at">COMPLETED AT</string>
     <string name="save">Save</string>
 
-    <string name="mean_score">Mean Score :</string>
-    <string name="format">Format :</string>
-    <string name="status_title">Status :</string>
-    <string name="total_eps">Total Episodes :</string>
-    <string name="total_chaps">Total Chapters :</string>
-    <string name="ep_duration">Avg. Duration of Episode :</string>
+    <string name="mean_score">Mean Score</string>
+    <string name="format">Format</string>
+    <string name="status_title">Status</string>
+    <string name="total_eps">Total Episodes</string>
+    <string name="total_chaps">Total Chapters</string>
+    <string name="ep_duration">Average Duration</string>
     <string name="min">\u0008min</string>
-    <string name="season">Season :</string>
-    <string name="start_date">Start Date :</string>
-    <string name="end_date">End Date :</string>
-    <string name="source">Source :</string>
-    <string name="main_studio">Main Studio :</string>
+    <string name="season">Season</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="source">Source</string>
+    <string name="main_studio">Studio</string>
     <string name="genres">Genres</string>
-    <string name="description">Description</string>
+    <string name="description">Synopsis</string>
     <string name="characters">Characters</string>
     <string name="relations">Relations</string>
 
