--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,9 +79,9 @@
     <string-array name="anime_sources">
         <item>GOGO</item>
         <item>GOGO-DUB</item>
-        <item>ANIMEPAHE</item>
-        <item>ZORO</item>
-        <item>TWIST MOE</item>
+<!--        <item>ANIMEPAHE</item>-->
+<!--        <item>ZORO</item>-->
+<!--        <item>TWIST MOE</item>-->
     </string-array>
     <string-array name="manga_sources">
         <item>MANGAPILL</item>
@@ -89,7 +89,8 @@
         <item>MANGAREADER</item>
     </string-array>
     <string name="source_not_found">
-        Couldn\'t find anything X(
+        Couldn\'t find anything X( \n
         Try another source.
     </string>
+    <string name="quality_selector">Select Quality</string>
 </resources>
