--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,9 +79,9 @@
     <string-array name="anime_sources">
         <item>GOGO</item>
         <item>GOGO-DUB</item>
+        <item>TWIST MOE</item>
 <!--        <item>ANIMEPAHE</item>-->
 <!--        <item>ZORO</item>-->
-<!--        <item>TWIST MOE</item>-->
     </string-array>
     <string-array name="manga_sources">
         <item>MANGAPILL</item>
