--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,8 +89,8 @@
     <string-array name="anime_sources">
         <item>GOGO</item>
         <item>GOGO-DUB</item>
-<!--        <item>TWIST MOE</item>-->
-<!--        <item>ANIMEPAHE</item>-->
+        <item>9ANIME (Bad Search)</item>
+        <item>9ANIME-DUB (Bad Search)</item>
     </string-array>
     <string-array name="manga_sources">
         <item>MANGAPILL</item>
