--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,12 +97,13 @@
     </string-array>
     <string-array name="manga_sources">
         <item>MANGAPILL</item>
-<!--        <item>MANGABUDDY</item>-->
-<!--        <item>MANGAREADER</item>-->
+        <!--        <item>MANGABUDDY</item>-->
+        <!--        <item>MANGAREADER</item>-->
     </string-array>
     <string name="source_not_found">
         Couldn\'t find anything X( \n
         Try another source.
     </string>
+    <string name="novel_na">Novels are not supported yet!</string>
     <string name="quality_selector">Select Quality</string>
 </resources>
