--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Saikou</string>
-    <string name="slogan" translatable="false">The Best Anime &amp; Manga app for Android.</string>
-    <string name="login">Login with Anilist</string>
+    <string name="slogan">The Best Anime, Manga &amp; Novel app for Android.</string>
+    <string name="login">Login</string>
 
     <string name="home">Home</string>
     <string name="anime">Anime</string>
@@ -106,4 +106,6 @@
     </string>
     <string name="novel_na">Novels are not supported yet!</string>
     <string name="quality_selector">Select Quality</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
