--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="slogan">The Best Anime, Manga &amp; Novel app for Android.</string>
     <string name="login">Login</string>
 
+    <string name="discord">https://discord.gg/SB2aAgKMcA</string>
+    <string name="telegram">https://telegram.me/saikou_app</string>
+    <string name="github">https://github.com/saikou-app/saikou</string>
+
     <string name="home">Home</string>
     <string name="anime">Anime</string>
     <string name="browse_anime">Browse Anime</string>
@@ -96,9 +100,9 @@
         <item>9ANIME-DUB</item>
     </string-array>
     <string-array name="manga_sources">
+        <item>MANGABUDDY</item>
+        <item>MANGADEX</item>
         <item>MANGAPILL</item>
-        <!--        <item>MANGABUDDY</item>-->
-        <!--        <item>MANGAREADER</item>-->
     </string-array>
     <string name="source_not_found">
         Couldn\'t find anything X( \n
@@ -106,6 +110,4 @@
     </string>
     <string name="novel_na">Novels are not supported yet!</string>
     <string name="quality_selector">Select Quality</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
