--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
         <item>GOGO-DUB</item>
         <item>9ANIME</item>
         <item>9ANIME-DUB</item>
+        <item>TWIST</item>
     </string-array>
     <string-array name="manga_sources">
         <item>MANGABUDDY</item>
